# project_nn

./: .gitignore  README.md  requirements.txt
app/: main.py  model1.json  train.py
c/: 1.py  CMakeLists.txt  build.bat
c/app/: CMakeLists.txt
c/app/src/: main.c
c/core/: CmakeLists.txt
c/core/include/: kazamori.h  nn.h
c/core/src/: convolution.c  convolution.h  data_set.c  data_set.h  full_connected.c  full_connected.h  image_set.c  image_set.h  library.c  library.h  library_math.c  library_math.h  max_pooling.c  max_pooling.h  nn.c  print.c  print.h
c/print/: CMakeLists.txt
c/print/include/: print.h
c/print/src/: print.c  print_data_set.c  print_full_connected.c  print_max_pooling.c
c/svm/: CMakeLists.txt
c/svm/src/: aaaa.c  main.c
c/tests/: CMakeLists.txt
c/tests/src/: test_fc.c  test_math.c
core/: convolution.py  ensemble.py  loader_images.py  max_pooling.py
presentation/: documentation.docx  presentation.pptx  project_nn (kazamori).docx  retsenzia.docx  text.docx
python/: install.bat
python/app/: data.json  template.py  test1.json  tmp_model1.json  tmp_test1.json
python/core/: __init__.py  full_connected.py  library.py
python/svm/: main.py
python/trash_bin/: 1.py  model.py  model_bias.py  test_conv1.py  v1.py
svm/: 1.json  2.json
trash_bin/: model_fc.py  temp.py  test.py  test_conv2.py  test_fc.py  test_model.py
